# research-forger

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/skills/researchforge-landscape/: SKILL.md
.claude/skills/researchforge-paper/: SKILL.md
.claude/skills/researchforge-run/: SKILL.md
.github/ISSUE_TEMPLATE/: beta_feedback.yml  bug_report.yml  setup_failure.yml
.github/workflows/: ci.yml  release.yml
claude-plugin/: README.md
docs/: RESEARCHFORGE_PHASED_BUILD_SPEC.md  architecture.md  claude-mode.md  demo.md  experiment-mode.md  research-mode.md  security.md
examples/docker-python/: Dockerfile  README.md  researchforge.example.yaml
examples/simple-python/: README.md  requirements.txt  researchforge.example.yaml
src/researchforge/: __init__.py  __main__.py  cli.py
tests/: conftest.py
tests/fixtures/: README.md
tests/integration/: test_examples.py
tests/unit/: test_analytics.py  test_arxiv_client.py  test_baseline_docker_args.py  test_baseline_venv.py  test_claude_skills.py  test_cli.py  test_constraints.py  test_context_export.py  test_contract_cli.py  test_contract_validate.py  test_contract_wizard.py  test_dashboard.py  test_doctor.py  test_domain_contract.py  test_domain_experiment.py  test_domain_project.py  test_domain_research.py  test_engineering_report.py  test_environment_resolver.py  test_experiment_planning.py  test_experiment_run.py  test_experiment_storage.py  test_experiment_tree.py  test_hub.py  test_importers.py  test_init.py  test_metrics_parser.py  test_path_guard.py  test_project_cli.py  test_ranking.py  test_repo_scanner.py  test_report.py  test_research_pure.py  test_run_lifecycle.py  test_runner.py  test_search_service.py  test_server.py  test_settings.py  test_ship_branch.py  test_ship_pr.py  (+6 more)
(+119 files in other folders)
