[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "researchforge"
dynamic = ["version"]
description = "From papers to proof — a Claude-first research and experimentation CLI."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "ResearchForge contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.6",
  "httpx>=0.27",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
serve = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.9",
  "types-PyYAML",
  "fastapi>=0.111",
  "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/forger-labs-hq/research-forger"
Changelog = "https://github.com/forger-labs-hq/research-forger/blob/main/CHANGELOG.md"
Issues = "https://github.com/forger-labs-hq/research-forger/issues"

[project.scripts]
researchforge = "researchforge.cli:app"

[tool.hatch.version]
path = "src/researchforge/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/researchforge"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
